CSS/styles.css
.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-center.column {
  flex-direction: column;
}

.flex-center.row {
  flex-direction: row;
}

.hidden {
  display: none;
}

/* INDEX PAGE */

.index-site-main-content {
  margin: 0;
}

.site-summary-card {
  background: linear-gradient(
    to bottom,
    #1f2a44 0%,
    #4a6fd1 15%,
    #8fb2ff 55%,
    #c7dbff 100%
  );
  border-radius: 10px;
  margin: 1rem;
  width: 50%;
}

.site-summary-card-body {
  margin: 0;
}

.site-summary-card-text {
  margin: 2rem;
}

.site-summary-card-img-container {
  aspect-ratio: 4 / 3;
}

.site-summary-card-img {
  width: 70%;
  height: 70%;
}

.main-section-house-ad {
  background-color: #2d6bdf8c;
  width: 50%;
  margin: 1rem;
  border-radius: 10px;
}

.main-section-house-ad-img-container {
  width: 100%;
  aspect-ratio: 16 / 9;
  margin-left: auto;
}

.main-section-house-ad-img {
  width: 100%;
  height: 100%;
}

/* REPAIRS PAGE */

/* SECTION */
.how-it-works {
  background: linear-gradient(to bottom, #c7dbff 0%, #b6cffb 100%);
  padding: 5rem 1.5rem;
  text-align: center;
}

/* HEADINGS */
.how-it-works-title {
  font-size: 2.2rem;
  margin-bottom: 0.5rem;
}

.how-it-works-subtitle {
  max-width: 520px;
  margin: 0 auto 3rem;
  color: #333;
}

/* LOCATIONS PAGE */

.locations-heading {
  background-color: aliceblue;
}

/* Animation keyframes */
@keyframes scroll-ad {
  0% {
    transform: translateX(-100vw);
  }
  100% {
    transform: translateX(100vw);
  }
}

/* Phone configs */
@media (max-width: 768px) {
  .index-site-main-content {
    flex-direction: column;
  }

  .site-summary-card {
    width: 100%;
  }

  .main-section-house-ad {
    width: 100%;
  }

  .how-it-works-cards {
    grid-template-columns: 1fr;
  }

  .contact-details-cards {
    flex-direction: column;
  }

  .contact-details-card {
    width: 90%;
  }
}

